PCHR-1251: Implement additional .chr_leave-report classes

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/report.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/report.html
@@ -36,7 +36,7 @@
         </thead>
         <tbody>
           <tr>
-            <td>
+            <td class="chr_leave-report__label">
               <i class="fa fa-chevron-down" aria-hidden="true"></i>
               Period Entitlement
             </td>
@@ -68,7 +68,7 @@
                   </thead>
                   <tbody>
                     <tr>
-                      <td>Brought Forward (expires 31/03/2016)</td>
+                      <td class="chr_leave-report__label">Brought Forward (expires 31/03/2016)</td>
                       <td></td>
                       <td></td>
                       <td>3</td>
@@ -79,7 +79,18 @@
                       <td></td>
                     </tr>
                     <tr>
-                      <td>Leave</td>
+                      <td class="chr_leave-report__label">&nbsp;</td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                    </tr>
+                    <tr>
+                      <td class="chr_leave-report__label">Leave</td>
                       <td></td>
                       <td></td>
                       <td>20</td>
@@ -90,7 +101,7 @@
                       <td></td>
                     </tr>
                     <tr>
-                      <td>Public Holidays</td>
+                      <td class="chr_leave-report__label">Public Holidays</td>
                       <td></td>
                       <td></td>
                       <td>8</td>
@@ -106,7 +117,7 @@
             </td>
           </tr>
           <tr>
-            <td>
+            <td class="chr_leave-report__label">
               <i class="fa fa-chevron-down" aria-hidden="true"></i>
               Public holidays
             </td>
@@ -138,7 +149,7 @@
                   </thead>
                   <tbody>
                     <tr>
-                      <td>Public Holiday</td>
+                      <td class="chr_leave-report__label">Public Holiday</td>
                       <td>31/05/2016</td>
                       <td>Admin Approved</td>
                       <td>-1</td>
@@ -147,11 +158,13 @@
                       <td></td>
                       <td></td>
                       <td>
-                        <a href="#"><i class="fa fa-ellipsis-v"></i></a>
+                        <a class="chr_leave-report__action" href="#">
+                          <i class="fa fa-ellipsis-v"></i>
+                        </a>
                       </td>
                     </tr>
                     <tr>
-                      <td>Public Holiday</td>
+                      <td class="chr_leave-report__label">Public Holiday</td>
                       <td>31/05/2016</td>
                       <td>Admin Approved</td>
                       <td>-1</td>
@@ -160,11 +173,13 @@
                       <td></td>
                       <td></td>
                       <td>
-                        <a href="#"><i class="fa fa-ellipsis-v"></i></a>
+                        <a class="chr_leave-report__action" href="#">
+                          <i class="fa fa-ellipsis-v"></i>
+                        </a>
                       </td>
                     </tr>
                     <tr>
-                      <td>Public Holiday</td>
+                      <td class="chr_leave-report__label">Public Holiday</td>
                       <td>31/05/2016</td>
                       <td>Admin Approved</td>
                       <td>-1</td>
@@ -173,11 +188,13 @@
                       <td></td>
                       <td></td>
                       <td>
-                        <a href="#"><i class="fa fa-ellipsis-v"></i></a>
+                        <a class="chr_leave-report__action" href="#">
+                          <i class="fa fa-ellipsis-v"></i>
+                        </a>
                       </td>
                     </tr>
                     <tr>
-                      <td>Public Holiday</td>
+                      <td class="chr_leave-report__label">Public Holiday</td>
                       <td>31/05/2016</td>
                       <td>Admin Approved</td>
                       <td>-1</td>
@@ -186,11 +203,13 @@
                       <td></td>
                       <td></td>
                       <td>
-                        <a href="#"><i class="fa fa-ellipsis-v"></i></a>
+                        <a class="chr_leave-report__action" href="#">
+                          <i class="fa fa-ellipsis-v"></i>
+                        </a>
                       </td>
                     </tr>
                     <tr>
-                      <td>Public Holiday</td>
+                      <td class="chr_leave-report__label">Public Holiday</td>
                       <td>31/05/2016</td>
                       <td>Admin Approved</td>
                       <td>-1</td>
@@ -199,11 +218,13 @@
                       <td></td>
                       <td></td>
                       <td>
-                        <a href="#"><i class="fa fa-ellipsis-v"></i></a>
+                        <a class="chr_leave-report__action" href="#">
+                          <i class="fa fa-ellipsis-v"></i>
+                        </a>
                       </td>
                     </tr>
                     <tr>
-                      <td>Public Holiday</td>
+                      <td class="chr_leave-report__label">Public Holiday</td>
                       <td>31/05/2016</td>
                       <td>Admin Approved</td>
                       <td>-1</td>
@@ -212,11 +233,13 @@
                       <td></td>
                       <td></td>
                       <td>
-                        <a href="#"><i class="fa fa-ellipsis-v"></i></a>
+                        <a class="chr_leave-report__action" href="#">
+                          <i class="fa fa-ellipsis-v"></i>
+                        </a>
                       </td>
                     </tr>
                     <tr>
-                      <td>Public Holiday</td>
+                      <td class="chr_leave-report__label">Public Holiday</td>
                       <td>31/05/2016</td>
                       <td>Admin Approved</td>
                       <td>-1</td>
@@ -225,11 +248,13 @@
                       <td></td>
                       <td></td>
                       <td>
-                        <a href="#"><i class="fa fa-ellipsis-v"></i></a>
+                        <a class="chr_leave-report__action" href="#">
+                          <i class="fa fa-ellipsis-v"></i>
+                        </a>
                       </td>
                     </tr>
                     <tr>
-                      <td>Public Holiday</td>
+                      <td class="chr_leave-report__label">Public Holiday</td>
                       <td>31/05/2016</td>
                       <td>Admin Approved</td>
                       <td>-1</td>
@@ -238,11 +263,13 @@
                       <td></td>
                       <td></td>
                       <td>
-                        <a href="#"><i class="fa fa-ellipsis-v"></i></a>
+                        <a class="chr_leave-report__action" href="#">
+                          <i class="fa fa-ellipsis-v"></i>
+                        </a>
                       </td>
                     </tr>
                     <tr>
-                      <td>Public Holiday</td>
+                      <td class="chr_leave-report__label">Public Holiday</td>
                       <td>31/05/2016</td>
                       <td>Admin Approved</td>
                       <td>-1</td>
@@ -251,7 +278,9 @@
                       <td></td>
                       <td></td>
                       <td>
-                        <a href="#"><i class="fa fa-ellipsis-v"></i></a>
+                        <a class="chr_leave-report__action" href="#">
+                          <i class="fa fa-ellipsis-v"></i>
+                        </a>
                       </td>
                     </tr>
                   </tbody>
@@ -259,8 +288,8 @@
               </div>
             </td>
           </tr>
-          <tr>
-            <td>
+          <tr class="chr_leave-report__label">
+            <td class="chr_leave-report__label">
               <i class="fa fa-chevron-down" aria-hidden="true"></i>
               Approved Requests
             </td>
@@ -292,7 +321,7 @@
                   </thead>
                   <tbody>
                     <tr>
-                      <td>Vacation</td>
+                      <td class="chr_leave-report__label">Vacation</td>
                       <td>18/01/2015 - 22/01/2015</td>
                       <td>Approved</td>
                       <td>-4</td>
@@ -300,12 +329,14 @@
                       <td></td>
                       <td></td>
                       <td></td>
-                      <td class="chr_leave-report__table__heading--action">
-                        <a href="#"><i class="fa fa-ellipsis-v"></i></a>
+                      <td>
+                        <a class="chr_leave-report__action" href="#">
+                          <i class="fa fa-ellipsis-v"></i>
+                        </a>
                       </td>
                     </tr>
                     <tr>
-                      <td>Sick</td>
+                      <td class="chr_leave-report__label">Sick</td>
                       <td>25/11/2015 - 27/11/2015</td>
                       <td>Approved</td>
                       <td></td>
@@ -313,12 +344,14 @@
                       <td></td>
                       <td></td>
                       <td>-2</td>
-                      <td class="chr_leave-report__table__heading--action">
-                        <a href="#"><i class="fa fa-ellipsis-v"></i></a>
+                      <td>
+                        <a class="chr_leave-report__action" href="#">
+                          <i class="fa fa-ellipsis-v"></i>
+                        </a>
                       </td>
                     </tr>
                     <tr>
-                      <td>Accrued TOIL (expires 20/03/2015)</td>
+                      <td class="chr_leave-report__label">Accrued TOIL (expires 20/03/2015)</td>
                       <td>18/03/2015 - 20/03/2015</td>
                       <td>Approved</td>
                       <td></td>
@@ -326,12 +359,14 @@
                       <td></td>
                       <td></td>
                       <td></td>
-                      <td class="chr_leave-report__table__heading--action">
-                        <a href="#"><i class="fa fa-ellipsis-v"></i></a>
+                      <td>
+                        <a class="chr_leave-report__action" href="#">
+                          <i class="fa fa-ellipsis-v"></i>
+                        </a>
                       </td>
                     </tr>
                     <tr>
-                      <td>TOIL</td>
+                      <td class="chr_leave-report__label">TOIL</td>
                       <td>18/04/2015 - 22/04/2015</td>
                       <td>Approved</td>
                       <td></td>
@@ -339,12 +374,14 @@
                       <td></td>
                       <td></td>
                       <td></td>
-                      <td class="chr_leave-report__table__heading--action">
-                        <a href="#"><i class="fa fa-ellipsis-v"></i></a>
+                      <td>
+                        <a class="chr_leave-report__action" href="#">
+                          <i class="fa fa-ellipsis-v"></i>
+                        </a>
                       </td>
                     </tr>
                     <tr>
-                      <td>Maternity</td>
+                      <td class="chr_leave-report__label">Maternity</td>
                       <td>01/06/2015 - 31/06/2015</td>
                       <td>Approved</td>
                       <td></td>
@@ -352,12 +389,14 @@
                       <td>-21</td>
                       <td></td>
                       <td></td>
-                      <td class="chr_leave-report__table__heading--action">
-                        <a href="#"><i class="fa fa-ellipsis-v"></i></a>
+                      <td>
+                        <a class="chr_leave-report__action" href="#">
+                          <i class="fa fa-ellipsis-v"></i>
+                        </a>
                       </td>
                     </tr>
                     <tr>
-                      <td>Other</td>
+                      <td class="chr_leave-report__label">Other</td>
                       <td>01/07/2015 - 10/07/2015</td>
                       <td>Approved</td>
                       <td></td>
@@ -365,8 +404,10 @@
                       <td></td>
                       <td></td>
                       <td>-1</td>
-                      <td class="chr_leave-report__table__heading--action">
-                        <a href="#"><i class="fa fa-ellipsis-v"></i></a>
+                      <td>
+                        <a class="chr_leave-report__action" href="#">
+                          <i class="fa fa-ellipsis-v"></i>
+                        </a>
                       </td>
                     </tr>
                   </tbody>
@@ -375,7 +416,7 @@
             </td>
           </tr>
           <tr class="active">
-            <td>Balance</td>
+            <td class="chr_leave-report__label">Balance</td>
             <td></td>
             <td></td>
             <td>19</td>
@@ -386,7 +427,7 @@
             <td></td>
           </tr>
           <tr>
-            <td>
+            <td class="chr_leave-report__label">
               <i class="fa fa-chevron-down" aria-hidden="true"></i>
               Open Requests
             </td>
@@ -418,7 +459,7 @@
                   </thead>
                   <tbody>
                     <tr>
-                      <td>Vacation</td>
+                      <td class="chr_leave-report__label">Vacation</td>
                       <td>18/02/2015 - 22/02/2015</td>
                       <td>Awaiting Approval</td>
                       <td>-4</td>
@@ -426,12 +467,14 @@
                       <td></td>
                       <td></td>
                       <td></td>
-                      <td class="chr_leave-report__table__heading--action">
-                        <a href="#"><i class="fa fa-ellipsis-v"></i></a>
+                      <td>
+                        <a class="chr_leave-report__action" href="#">
+                          <i class="fa fa-ellipsis-v"></i>
+                        </a>
                       </td>
                     </tr>
                     <tr>
-                      <td>Accrued TOIL (expires 20/03/2015)</td>
+                      <td class="chr_leave-report__label">Accrued TOIL (expires 20/03/2015)</td>
                       <td>17/01/2015</td>
                       <td>More Information Required</td>
                       <td></td>
@@ -439,8 +482,10 @@
                       <td></td>
                       <td></td>
                       <td></td>
-                      <td class="chr_leave-report__table__heading--action">
-                        <a href="#"><i class="fa fa-ellipsis-v"></i></a>
+                      <td>
+                        <a class="chr_leave-report__action" href="#">
+                          <i class="fa fa-ellipsis-v"></i>
+                        </a>
                       </td>
                     </tr>
                   </tbody>
@@ -449,7 +494,7 @@
             </td>
           </tr>
           <tr class="active">
-            <td>Future Balance</td>
+            <td class="chr_leave-report__label">Future Balance</td>
             <td></td>
             <td></td>
             <td>15</td>
@@ -460,7 +505,7 @@
             <td></td>
           </tr>
           <tr>
-            <td colspan="9">
+            <td class="chr_leave-report__label" colspan="9">
               <i class="fa fa-chevron-down" aria-hidden="true"></i>
               Cancelled and Other
             </td>
@@ -484,7 +529,7 @@
                   </thead>
                   <tbody>
                     <tr>
-                      <td>Sick</td>
+                      <td class="chr_leave-report__label">Sick</td>
                       <td>18/05/2015 - 22/05/2015</td>
                       <td>Rejected</td>
                       <td></td>
@@ -495,7 +540,7 @@
                       <td></td>
                     </tr>
                     <tr>
-                      <td>Vacation</td>
+                      <td class="chr_leave-report__label">Vacation</td>
                       <td>18/02/2015 - 22/02/2015</td>
                       <td>Cancelled</td>
                       <td></td>
@@ -506,7 +551,7 @@
                       <td></td>
                     </tr>
                     <tr>
-                      <td>Late</td>
+                      <td class="chr_leave-report__label">Late</td>
                       <td>18/01/2015</td>
                       <td>Approved</td>
                       <td></td>
@@ -517,7 +562,7 @@
                       <td></td>
                     </tr>
                     <tr>
-                      <td>Accrued TOIL (expires 20/03/2015)</td>
+                      <td class="chr_leave-report__label">Accrued TOIL (expires 20/03/2015)</td>
                       <td></td>
                       <td>Expired</td>
                       <td></td>
@@ -528,7 +573,7 @@
                       <td></td>
                     </tr>
                     <tr>
-                      <td>Brought Forward (expires 31/03/2015)</td>
+                      <td class="chr_leave-report__label">Brought Forward (expires 31/03/2015)</td>
                       <td></td>
                       <td>Expired</td>
                       <td></td>
