--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/report.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/report.html
@@ -426,6 +426,14 @@
             <td>-1</td>
             <td></td>
           </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="chr_leave-report__table table-responsive">
+      <table class="table table-condensed-mixed">
+        <tbody>
           <tr>
             <td class="chr_leave-report__label">
               <i class="fa fa-chevron-down" aria-hidden="true"></i>
@@ -504,6 +512,14 @@
             <td></td>
             <td></td>
           </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="chr_leave-report__table table-responsive">
+      <table class="table table-condensed-mixed">
+        <tbody>
           <tr>
             <td class="chr_leave-report__label" colspan="9">
               <i class="fa fa-chevron-down" aria-hidden="true"></i>
